--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "@tanstack/react-router": "^1.130.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
@@ -27,11 +26,13 @@
     "@storybook/addon-vitest": "^9.0.17",
     "@storybook/react-vite": "^9.0.18",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/router-devtools": "^1.130.2",
+    "@tanstack/react-router-devtools": "^1.130.13",
     "@tanstack/router-plugin": "^1.130.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
@@ -41,15 +42,14 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "playwright": "^1.54.1",
     "prettier": "3.6.2",
     "storybook": "^9.0.18",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.6",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.54.1",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
