--- a/.github/workflows/lint_and_type_check.yml
+++ b/.github/workflows/lint_and_type_check.yml
@@ -1,4 +1,4 @@
-name: Lint frontend
+name: Lint and Type Check frontend
 
 on:
   push:
@@ -17,10 +17,13 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
-          cache-dependency-path: './package-lock.json'
+          cache-dependency-path: 'package-lock.json'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Run Lint Check
         run: npm run lint
+
+      - name: Run Type Check
+        run: npm run type-check
