add: スタイル関連の依存関係を追加
- cn関数用にclsxとtailwind-merge
- uiライブラリのdaisyui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,7 @@
     ".vscode-insiders"
   ],
   "extensions.ignoreRecommendations": false,
-  "cSpell.words": []
+  "cSpell.words": [
+    "daisyui"
+  ]
 }
