chore: storybookのサンプルファイル削除に伴う設定ファイルの修正

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
-  "exclude": ["src/stories", "src/**/*.stories.tsx"]
+  "include": ["src"]
 }
