--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-router": "^1.130.2",
     "clsx": "^2.1.1",
     "react": "^19.1.1",
