--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint-staged": "^16.1.5",
     "playwright": "^1.54.1",
     "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.1.1",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.9.2",
