--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "type-check": "tsc -b --noEmit",
     "lint": "eslint .",
-    "format": "prettier --write ./src/**/* --ignore-unknown",
+    "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx} --ignore-unknown && eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
     "preview": "vite preview",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
@@ -41,6 +41,7 @@
     "daisyui": "^5.0.50",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -50,6 +51,7 @@
     "lint-staged": "^16.1.5",
     "playwright": "^1.54.1",
     "prettier": "3.6.2",
+    "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.1.1",
     "tailwindcss": "^4.1.12",
