--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@tanstack/react-router": "^1.132.2",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
@@ -34,7 +36,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-router-devtools": "^1.131.36",
-    "@tanstack/router-plugin": "^1.131.50",
+    "@tanstack/router-plugin": "^1.132.25",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.6",
