fix: storybook周りの依存関係の解決

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@chromatic-com/storybook": "^4.1.1",
     "@eslint/js": "^9.34.0",
     "@storybook/addon-a11y": "^10.0.5",
-    "@storybook/addon-docs": "^9.1.10",
-    "@storybook/addon-vitest": "^9.1.15",
-    "@storybook/react-vite": "^9.1.5",
+    "@storybook/addon-docs": "~10.0.5",
+    "@storybook/addon-vitest": "~10.0.5",
+    "@storybook/react-vite": "~10.0.5",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-router-devtools": "^1.131.36",
@@ -50,7 +50,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.23",
-    "eslint-plugin-storybook": "^9.1.8",
+    "eslint-plugin-storybook": "~10.0.5",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
@@ -58,7 +58,7 @@
     "prettier": "3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "storybook": "^9.1.6",
+    "storybook": "^10.0.5",
     "tailwindcss": "^4.1.16",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.46.1",
